Opened 12 years ago

Closed 12 years ago

#3849 closed defect (fixed)

ffvp9 fails to decode file libpvpx decodes just fine

Reported by: jimbankoski Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: vp9
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:
How to reproduce:

%ffplay ffvp9_fails_where_libvpx.succeeds.webm

Broken ugly frames 

%ffplay -vcodec libvpx-vp9  ffvp9_fails_where_libvpx.succeeds.webm

Looks fine 


Patches should be submitted to the ffmpeg-devel mailing list and not this bug tracker.

Attachments (1)

ffvp9_fails_where_libvpx.succeeds.webm (2.5 MB ) - added by jimbankoski 12 years ago.
example file that decodes fine in libvpx but is broken in ffvp9

Change History (5)

by jimbankoski, 12 years ago

example file that decodes fine in libvpx but is broken in ffvp9

comment:1 by Clément Bœsch, 12 years ago

Component: undeterminedavcodec
Keywords: vp9 added
Reproduced by developer: set
Status: newopen

Confirmed. Doesn't look ASM related.

[~/src/ffmpeg]☭ ./ffplay -cpuflags none /tmp/ffvp9_fails_where_libvpx.succeeds.webm
ffplay version N-65523-g9a16214 Copyright (c) 2003-2014 the FFmpeg developers
  built on Aug 11 2014 20:39:35 with gcc 4.9.1 (GCC)
  configuration: --enable-gpl --enable-fontconfig --enable-libfreetype --enable-libmp3lame --enable-libvorbis --enable-libx264 --enable-libvpx --enable-x11grab --samples=/home/ubitux/fate-samples --assert-level=2 --cc='ccache cc'
  libavutil      54.  1.100 / 54.  1.100
  libavcodec     56.  0.100 / 56.  0.100
  libavformat    56.  0.100 / 56.  0.100
  libavdevice    56.  0.100 / 56.  0.100
  libavfilter     5.  0.100 /  5.  0.100
  libswscale      3.  0.100 /  3.  0.100
  libswresample   1.  0.100 /  1.  0.100
  libpostproc    53.  0.100 / 53.  0.100
Input #0, matroska,webm, from '/tmp/ffvp9_fails_where_libvpx.succeeds.webm':
  Metadata:
    encoder         : libwebm-0.2.1.0
  Duration: 00:00:26.20, start: 0.000000, bitrate: 800 kb/s
    Stream #0:0(eng): Video: vp9, yuv420p, 640x360, SAR 1:1 DAR 16:9, 30 fps, 30 tbr, 1k tbn, 1k tbc (default)

comment:2 by Carl Eugen Hoyos, 12 years ago

Component: avcodecundetermined
Keywords: vp9 removed
Reproduced by developer: unset

For future tickets:
Please always provide a ffmpeg command line that allows to reproduce the issue together with the complete, uncut console output.

$ ffmpeg -i ffvp9_fails_where_libvpx.succeeds.webm -ss 10 -t 10 -qscale 2 out.avi
ffmpeg version N-65523-g9a16214 Copyright (c) 2000-2014 the FFmpeg developers
  built on Aug 11 2014 17:58:58 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      54.  1.100 / 54.  1.100
  libavcodec     56.  0.100 / 56.  0.100
  libavformat    56.  0.100 / 56.  0.100
  libavdevice    56.  0.100 / 56.  0.100
  libavfilter     5.  0.100 /  5.  0.100
  libswscale      3.  0.100 /  3.  0.100
  libswresample   1.  0.100 /  1.  0.100
  libpostproc    53.  0.100 / 53.  0.100
Input #0, matroska,webm, from 'ffvp9_fails_where_libvpx.succeeds.webm':
  Metadata:
    encoder         : libwebm-0.2.1.0
  Duration: 00:00:26.20, start: 0.000000, bitrate: 800 kb/s
    Stream #0:0(eng): Video: vp9, yuv420p, 640x360, SAR 1:1 DAR 16:9, 30 fps, 30 tbr, 1k tbn, 1k tbc (default)
Please use -q:a or -q:v, -qscale is ambiguous
Output #0, avi, to 'out.avi':
  Metadata:
    ISFT            : Lavf56.0.100
    Stream #0:0(eng): Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 640x360 [SAR 1:1 DAR 16:9], q=2-31, 200 kb/s, 30 fps, 30 tbn, 30 tbc (default)
    Metadata:
      encoder         : Lavc56.0.100 mpeg4
Stream mapping:
  Stream #0:0 -> #0:0 (vp9 (native) -> mpeg4 (native))
Press [q] to stop, [?] for help
frame=  300 fps=0.0 q=2.0 Lsize=    2099kB time=00:00:10.00 bitrate=1719.6kbits/s
video:2086kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.613195%

comment:3 by Carl Eugen Hoyos, 12 years ago

Component: undeterminedavcodec
Keywords: vp9 added
Reproduced by developer: set

comment:4 by Clément Bœsch, 12 years ago

Resolution: fixed
Status: openclosed

Fixed by Ronald in 14e3025518124f99cb0f5885feb603a9f217d25d.

Thank you for the report.

Note: See TracTickets for help on using tickets.